# xtb4stda

./: .gitignore  .param_gbsa_acetone  .param_gbsa_acetonitrile  .param_gbsa_chcl3  .param_gbsa_cs2  .param_gbsa_dmso  .param_gbsa_ether  .param_gbsa_h2o  .param_gbsa_methanol  .param_gbsa_thf  .param_gbsa_toluene  .param_stda1.xtb  .param_stda2.xtb  .travis.yml  .xtb4stdarc  Makefile  README.md  meson.build  meson_options.txt
.github/workflows/: fortran-build.yml
MAKE/: Makeconfig  Makerules  depend.rb  xtb4stda.config  xtb4stda.objs
include/: aoelementcommon.fh  atmass.fh  atomlistcommon.fh  d3common.fh  d4_alphacommon.f  ehtcommon.fh  fixcommon.fh  grida230.fh  scancommon.fh  setcommon.fh  spherecommon.fh  splitcommon.fh  stuff.fh  symcommon.fh
src/: Makefile  asym.f  atovlp.f  axis.f  axis2.f  axis3.f  blckmgs.f90  block.f  blowsy.f  cm5.f  copyc6.f  dftd3.f  dipole.f  drsp.f  dtrafo.f  dtrafo2.f  elem.f  fermi.f  foden.f  fragment.f  gauss.f  gbobc.f  gover.f  iniq.f  intpack.f90  lin.f  local.f  lopt.f90  main.f  makel.f  matinv.f  meson.build  molbld.f  ncoord.f90  ncoord2.f  neighbor.f  onetri.f  out.f  pop.f  pqn.f  (+28 more)
