srcs += files('asym.f')
srcs += files('atovlp.f')
srcs += files('axis2.f')
srcs += files('axis3.f')
srcs += files('axis.f')
srcs += files('blckmgs.f90')
srcs += files('block.f')
srcs += files('blowsy.f')
srcs += files('cm5.f')
srcs += files('copyc6.f')
srcs += files('dftd3.f')
srcs += files('dipole.f')
srcs += files('drsp.f')
srcs += files('dtrafo2.f')
srcs += files('dtrafo.f')
srcs += files('elem.f')
srcs += files('fermi.f')
srcs += files('foden.f')
srcs += files('fragment.f')
srcs += files('gauss.f')
srcs += files('gbobc.f')
srcs += files('gover.f')
srcs += files('iniq.f')
srcs += files('intpack.f90')
srcs += files('lin.f')
srcs += files('local.f')
srcs += files('lopt.f90')
srcs += files('main.f')
srcs += files('makel.f')
srcs += files('matinv.f')
srcs += files('molbld.f')
srcs += files('ncoord2.f')
srcs += files('ncoord.f90')
srcs += files('neighbor.f')
srcs += files('onetri.f')
srcs += files('out.f')
srcs += files('pop.f')
srcs += files('pqn.f')
srcs += files('printbas.f')
srcs += files('printmold.f')
srcs += files('printmos.f')
srcs += files('prmat.f')
srcs += files('qsort.f90')
srcs += files('rdcoord2.f')
srcs += files('readl2.f')
srcs += files('readl.f')
srcs += files('readparam.f')
srcs += files('setmetal.f')
srcs += files('setwll.f')
srcs += files('shifteps.f')
srcs += files('shiftlp.f')
srcs += files('spline2.f90')
srcs += files('spline.f90')
srcs += files('splitmol.f')
srcs += files('symtranslib.f')
srcs += files('timing.f')
srcs += files('uxtb.f')
srcs += files('valel.f')
srcs += files('warn.f')
srcs += files('wrc0.f')
srcs += files('wrcoord.f')
srcs += files('wren.f')
srcs += files('wrxyz.f')
srcs += files('xbasis.f')
srcs += files('xtb.f')
srcs += files('zmatpr.f')
